# textdraw

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md
src/: app.rs  cli.rs  component.rs  element.rs  events.rs  file.rs  geometry.rs  input.rs  main.rs  styles.rs  types.rs  ui.rs
src/canvas/: mod.rs
src/components/: canvas.rs  help.rs  help_line.rs  mod.rs  statusbar.rs  table_editor.rs
src/components/inputs/: choice.rs  mod.rs  numeric.rs
src/components/panels/: elements.rs  mod.rs  properties.rs  tools.rs
src/controllers/: canvas.rs  help.rs  mod.rs
src/drawing/: algorithms.rs
src/elements/: arrow.rs  borders.rs  line.rs  mod.rs  properties.rs  rectangle.rs  table.rs  text.rs
src/events/: global.rs  key.rs  mod.rs  mouse.rs  types.rs
src/events/tests/: dispatch_tests.rs  fixtures.rs  mod.rs
src/state/: canvas.rs  command.rs  file.rs  help.rs  mod.rs  selection.rs  tool.rs
src/state/elements/: arrow.rs  line.rs  mod.rs  rectangle.rs  segment.rs  text.rs
src/tools/: arrow.rs  line.rs  mod.rs  rectangle.rs  select.rs  table.rs  text.rs
src/ui/: canvas.rs  mod.rs  positioning.rs  sidebar.rs  statusbar.rs  styles.rs  widgets.rs
src/ui/panels/: elements.rs  properties.rs  tools.rs
src/utils/: mod.rs  modal_area.rs
tests/: cli.rs
