[package]
name = "textdraw"
version = "0.1.0"
edition = "2024"
authors = ["Balagopal Kanattil Shaji <balukanattil@gmail.com>"]
description = "Interactive terminal ASCII diagram editor"
license = "MIT"
repository = "https://github.com/kanatti/textdraw"
keywords = ["ascii", "diagram", "editor", "tui", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
# TUI Framework
ratatui = { version = "0.29", default-features = true, features = ["crossterm", "serde"] }
crossterm = { version = "0.28", features = ["serde", "event-stream"] }

# Error Handling
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
